Rename model and remove celery dependency

--- a/MoneyManagement/templates/admin/base_site.html
+++ b/MoneyManagement/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 
 {% block title %}
-    Gullin Admin | {{ site_header }}
+    MoneyManagement Admin | {{ site_header }}
 {% endblock %}
 
 {% block extrahead %}
