--- a/MoneyManagement/templates/admin/base_site.html
+++ b/MoneyManagement/templates/admin/base_site.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block branding %}
-    <h1 id="site-name"><a href="{% url 'admin:index' %}"><b>Gullin Admin Portal</b></a></h1>
+    <h1 id="site-name"><a href="{% url 'admin:index' %}"><b>MoneyManagement Admin Portal</b></a></h1>
 {% endblock %}
 
 {% block welcome-msg %}
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block userlinks %}
-    <a href="https://gullin.io" target="_blank">Back to site</a> |
+{#    <a href="https://gullin.io" target="_blank">Back to site</a> |#}
     <a href="{% url 'admin:logout' %}">Log out</a>
 {% endblock %}
 
